# the-devils-dungeon-server

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  example-docker-compose.yml  shell.nix
.sqlx/: query-01b924e5b9239f163eb611f20fe7cc9ac1e80a1a56557a2111e74a24a232ad56.json  query-0abb333e07393cef23dd0cf9f5bbe0bd1465833a3133afd3dc7a348872c56b12.json  query-3555fc5e85817d9800ce57e96d4b30da4142ec195205d8499070c8e1a14ab424.json  query-527bd66459e8ed0f43e059798df93c3e1c3c02943e6dd27e05e1d4d760e65944.json  query-5813c5e835c5de51af6f9aa73e2f052d798c56ce3667afc1b4ca40c3c5bf25cb.json  query-6e90cf2e000b492b7eeac9c07c343c0f0e40f5fd9f833373979edf6c114a6990.json  query-98476a90b0e9d3053fb7b600d024f5651f3d675b11060f9d2f066e727771441b.json  query-9c83b8acca4cbe7d1abd33a850b3c234e6108ba65798b13a5a27051826e7b7b9.json  query-e45bf5c750d420690393893864b1fd731bd6c9107d8b1824b00441406eacb55a.json  query-f65f39bf7392f04aafe56a3ea582d5392eca908464fedd29c22d5453ff160746.json
doc/: README.md
doc/Exercises/: day1.md
migrations/: 20250819120000_init.sql  20250821170212_stars-and-crystals.sql
src/: admin.rs  auth.rs  handlers.rs  main.rs  models.rs
