[package]
name = "level_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-rt = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
env_logger = "0.11"
argon2 = "0.5"
jsonwebtoken = "9"
futures-util = "0.3"
rand = "0.8"
rand_core = "0.6"
chrono = "0.4.41"


[[bin]]
name = "setup"
path = "src/bin/setup.rs"
